Bug 282750. Don't worry about over-complex opaque regions when we want to add a rect that will cover the entire region (and thus simplify it). r+sr=bzbarsky